--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     width: 100%;
     margin-top: 0;
     justify-content: center;
-    background-color: blue;
+    background-color: green;
     
 }
 
